# netcdf-c

./: CMakeLists.txt  CTestCustom.cmake.in  Makefile.am  RELEASE_NOTES.md  acinclude.m4  appveyor.yml  config.h.cmake.in  configure.ac  libnetcdf.settings.in  nc-config.cmake.in  nc-config.in  s3cleanup.in  s3cleanup.sh  s3gc.in  s3gc.sh  test_common.in  v3.tgz  v3_build.sh  verbose.am
NUG/: Doxyfile  NCZARR.md  nczarr.md
cmake/: dependencies.cmake  netcdf_functions_macros.cmake
dap4_test/: CMakeLists.txt  Makefile.am  dump.c  test_constraints.sh  test_hyrax.sh
debug/: actions  cf  cf.cmake
docs/: CMakeLists.txt  Doxyfile.in  Makefile.am  auth.md  cloud.md  dispatchers.md  filters.md  inmemory.md  internal.md  nczarr.md  pluginpath.md  quickstart_env.md  rc.md
h5_test/: Makefile.am  tst_h_enums.c  tst_h_files4.c  tst_h_vars2.c
hdf4_test/: tst_hdf4_extra.c
include/: CMakeLists.txt  Makefile.am  hdf5dispatch.h  hdf5internal.h  nc.h  nc3dispatch.h  nc4dispatch.h  nc4internal.h  nc_logging.h  nc_provenance.h  ncauth.h  ncaws.h  ncconfigure.h  ncdap.h  ncdispatch.h  ncexhash.h  ncfilter.h  ncglobal.h  nchashmap.h  nchttp.h  ncjson.h  nclist.h  nclog.h  ncmodel.h  ncpathmgr.h  ncplugins.h  ncproplist.h  ncrc.h  ncs3sdk.h  nctestserver.h  ncthreaded.h  ncuri.h  ncutil.h  ncwinpath.h  ncxcache.h  netcdf.h  netcdf_aux.h  netcdf_dispatch.h  netcdf_dispatch.h.in  netcdf_filter.h  (+6 more)
libdap2/: Makefile.am  daputil.c  dceparselex.h  ncd2dispatch.c
libdap4/: d4chunk.c  d4curlfunctions.c  d4curlfunctions.h  d4data.c  d4debug.h  d4dump.c  d4file.c  d4fix.c  d4http.c  d4includes.h  d4meta.c  d4odom.c  d4parser.c  d4read.c  d4swap.c  d4util.c  d4varx.c  ncd4.h  ncd4dispatch.c  ncd4types.h
libdispatch/: CMakeLists.txt  Makefile.am  awsincludes.h  datt.c  dattinq.c  dauth.c  daux.c  daws.c  dcopy.c  dcrc64.c  ddispatch.c  derror.c  dfile.c  dfilter.c  dfilterx,c  dfilterx.c  dglobal.c  dhttp.c  dinfermodel.c  dinstance.c  dinstance_intern.c  dnotnc4.c  dpathmgr.c  dplugins.c  dprobe.c  dprobinfer.c  drc.c  ds3util.c  dstring.c  dthreaded.c  dutil.c  dvar.c  dvarinq.c  dvarput.c  dwinpath.c  nc.c  ncbytes.c  ncexhash.c  ncglob.c  ncglob.h  (+16 more)
libhdf4/: hdf4dispatch.c  hdf4file.c
libhdf5/: H5FDhttp.c  H5FDhttp.h  hdf5attr.c  hdf5create.c  hdf5debug.h  hdf5dispatch.c  hdf5file.c  hdf5filter.c  hdf5internal.c  hdf5open.c  hdf5plugins.c  hdf5var.c  nc4hdf.c  nc4info.c  nc4mem.c  nc4memcb.c
liblib/: CMakeLists.txt  Makefile.am  nc_initialize.c
libncpoco/: CMakeLists.txt  Makefile.am  cp_unix.c  cp_win32.c
libncxml/: Makefile.am
libnczarr/: CMakeLists.txt  Makefile.am  awsincludes.h  buddy_alloc.h  ut_mapnc4.c  ut_projection.c  ut_projections.c  ut_range.c  ut_rangeodom.c  ut_util.c  zallchunks.c  zarr.c  zarr.h  zattr.c  zcache.c  zcache.h  zchunking.c  zchunking.h  zclose.c  zcreate.c  zcvt.c  zdebdispatch.h  zdebug.c  zdebug.h  zdim.c  zdispatch.c  zdispatch.h  zfile.c  zfill.c  zfill.h  zfilter.c  zfilter.h  zformat.c  zformat.h  zformat2.c  zformat3.c  zgrp.c  zincludes.h  zinfer.c  zinfermodes.c  (+42 more)
libnczarr/obsolete/: zmap_nz4.c
libsrc/: memio.c  nc3dispatch.c  nc3internal.c  ncFile.c  ncio.h  posixio.c  putget.m4  s3io.c  var.c  winceio.c
libsrc4/: nc4cache.c  nc4dim.c  nc4dispatch.c  nc4filters.c  nc4internal.c  nc4type.c  nc4var.c
libsrcp/: ncpdispatch.c
libzarr/: Makefile.am  Makefile.in  fix  fix2  ncjson.h  nczdispatch.h  nczfuncs.h  nczmap.h  ncztypes.h  zarr.h  zattr.c  zcache.c  zchunkio.c  zclose.c  zcomposite.c  zcreate.c  zcurlfunctions.c  zcurlfunctions.h  zdebug.c  zdebug.h  zdim.c  zdispatch.c  zdispatch.h  zf.c  zfile.c  zfuncs.h  zgrp.c  zincludes.h  zinternal.c  zinternal.h  zjson.c  zjson.h  zmap.c  zmap.h  zmap_nc4.c  zmeta.c  zmeta.h  znc4.c  zopen.c  zprov.c  (+6 more)
libzarr/obsolete/: zmap_file.c
libzarr/save/: zattr.c  zopen.c
libzarr/save2/: zattr.c  zcache.c  zcreate.c  zdim.c  zdispatch.c  zfile.c  zgrp.c  zinternal.c  zinternal.h  zopen.c  zprov.c  ztype.c
nc_perf/: bigmeta.c  bm_many_atts.c  bm_many_objs.c  openbigmeta.c  tst_chunks3.c  tst_utils.c  tst_utils.h
nc_test/: CMakeLists.txt  Makefile.am  run_inmemory.sh  t_nc.c  test_byterange.sh  tst_inmemory.c  tst_names.c
nc_test4/: CMakeLists.txt  Makefile.am  findplugin.in  ref_anon_enum.cdl  ref_bzip2.c  run_par_test.sh.in  test_fillonly.c  test_fillonly.sh  test_filter.c  test_filter_misc.c  test_filter_order.c  test_filter_repeat.c  tst_anon_types.sh  (+21 more)
nczarr_test/: CMakeLists.txt  Makefile.am  bm_common.sh  bm_many_atts.sh  bm_many_objs.sh  bm_utils.c  itmeta.c  ncdumpchunks.c  ncpluginpath.c  ref_any.cdl  ref_blosc.cdl  ref_blosc_zmap.txt  ref_bzip2.cdl  ref_filtered.cdl  ref_jsonconvention.zmap  ref_multi.cdl  ref_newformatpure.cdl  ref_perdimspecs.cdl  ref_scalar_nczarr.cdl  ref_string_nczarr.baseline  ref_string_zarr.baseline  ref_t_ncgen.cdl  ref_tmp_whole.cdl  ref_ut_map_create_nzf.cdl  ref_ut_map_search_nz4.txt  ref_ut_map_search_nzf.txt  ref_ut_map_write2meta_nz4.cdl  ref_ut_map_write2meta_nzf.cdl  ref_ut_map_writedata_nz4.cdl  ref_ut_map_writedata_nzf.cdl  ref_ut_map_writemeta_nz4.cdl  ref_ut_map_writemeta_nzf.cdl  ref_ut_mapapi_create_nz4.cdl  ref_ut_mapapi_create_nzf.cdl  ref_ut_mapapi_create_s3.cdl  ref_ut_mapapi_data_nz4.cdl  ref_ut_mapapi_data_s3.cdl  ref_ut_mapapi_meta_nz4.cdl  ref_ut_mapapi_meta_nzf.cdl  ref_ut_mapapi_meta_s3.cdl  (+92 more)
plugins/: CMakeLists.txt  H5Zblosc.c  H5Zbzip2.c  H5Zendian.c  H5Zfletcher32.c  H5Zmisc.c  H5Znoop.c  H5Zshuffle.c  H5Zstringn.c  H5Zszip.c  H5Ztemplate.c  H5Zunknown.c  H5Zutil.c  H5Zzstd.c  Makefile.am  NCZbzip2.c  NCZdefaults.c  NCZdeflate.c  NCZhdf5filters.c  NCZmisc.c  NCZstdfilters.c  NCZszip.c  NCZtest.c  h5misc.h
zarr_test/: CMakeLists.txt  Makefile.am  ref_t_meta_create.cdl  ref_t_meta_dim1.cdl  ref_t_meta_var1.cdl  ref_ut_create.cdl  ref_ut_mapnc4_create.cdl  ref_ut_mapnc4_search.txt  ref_ut_mapnc4_wmeta.cdl  ref_ut_mapnc4_wmeta2.cdl  ref_ut_mapnc4_write.cdl  ref_ut_wmeta.cdl  ref_ut_wmeta2.cdl  ref_ut_write.cdl  run_projections.sh  run_tests.sh  run_unittests.sh  t_meta.c  t_projections.c  ut_mapnc4.c  ut_projections.c  ztest.h
(+142 files in other folders)
