# Copyright 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
# 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
# 2015, 2016, 2017, 2018
# University Corporation for Atmospheric Research/Unidata.

# See netcdf-c/COPYRIGHT file for more info.
SET(CMAKE_BUILD_TYPE "")

CONFIGURE_FILE(H5Znoop.c ${CMAKE_CURRENT_BINARY_DIR}/H5Znoop1.c COPYONLY)

SET(libh5bzip2_SOURCES blocksort.c huffman.c crctable.c randtable.c compress.c decompress.c bzlib.c H5Zbzip2.c ${NCJ})

SET(libh5misc_SOURCES H5Zmisc.c H5Zutil.c h5misc.h)

SET(libh5noop_SOURCES H5Znoop.c H5Zutil.c h5noop.h)
SET(libh5noop1_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/H5Znoop1.c H5Zutil.c h5noop.h)

SET(libnczdeflate_SOURCES NCZdeflate.c)
SET(libnczbzip2_SOURCES NCZbzip2.c)

IF(ENABLE_FILTER_TESTING)
IF(BUILD_UTILITIES)

# LDFLAGS = -module -avoid-version -shared -export-dynamic -no-undefined

IF(MSVC)
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}")
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
ENDIF()

# Note we use name test_bzip2 instead of bzip2 to avoid logical
# target name clash with examples/C/hdf5plugins
ADD_LIBRARY(test_bzip2 MODULE ${libh5bzip2_SOURCES})
SET_TARGET_PROPERTIES(test_bzip2 PROPERTIES OUTPUT_NAME "bzip2")
SET_TARGET_PROPERTIES(test_bzip2 PROPERTIES LIBRARY_OUTPUT_NAME "h5bzip2")
SET_TARGET_PROPERTIES(test_bzip2 PROPERTIES ARCHIVE_OUTPUT_NAME "h5bzip2")
SET_TARGET_PROPERTIES(test_bzip2 PROPERTIES RUNTIME_OUTPUT_NAME "h5bzip2")
TARGET_LINK_LIBRARIES(test_bzip2 ${ALL_TLL_LIBS})

IF(ENABLE_BLOSC)
SET(libh5blosc_SOURCES H5Zblosc.c H5Zblosc.h)
ADD_LIBRARY(h5blosc MODULE ${libh5blosc_SOURCES})
SET_TARGET_PROPERTIES(h5blosc PROPERTIES LIBRARY_OUTPUT_NAME "h5blosc")
SET_TARGET_PROPERTIES(h5blosc PROPERTIES ARCHIVE_OUTPUT_NAME "h5blosc")
SET_TARGET_PROPERTIES(h5blosc PROPERTIES RUNTIME_OUTPUT_NAME "h5blosc")
TARGET_LINK_LIBRARIES(${ALL_TLL_LIBS};${Blosc_LIBRARIES})
ENDIF()

ADD_LIBRARY(h5misc MODULE ${libh5misc_SOURCES})
SET_TARGET_PROPERTIES(h5misc PROPERTIES LIBRARY_OUTPUT_NAME "h5misc")
SET_TARGET_PROPERTIES(h5misc PROPERTIES ARCHIVE_OUTPUT_NAME "h5misc")
SET_TARGET_PROPERTIES(h5misc PROPERTIES RUNTIME_OUTPUT_NAME "h5misc")
TARGET_LINK_LIBRARIES(h5misc ${ALL_TLL_LIBS})

SET_SOURCE_FILES_PROPERTIES(H5Znoop.c PROPERTIES COMPILE_OPTIONS -DNOOP_INSTANCE=0)
ADD_LIBRARY(h5noop MODULE ${libh5noop_SOURCES})
SET_TARGET_PROPERTIES(h5noop PROPERTIES LIBRARY_OUTPUT_NAME "h5noop")
SET_TARGET_PROPERTIES(h5noop PROPERTIES ARCHIVE_OUTPUT_NAME "h5noop")
SET_TARGET_PROPERTIES(h5noop PROPERTIES RUNTIME_OUTPUT_NAME "h5noop")
TARGET_LINK_LIBRARIES(h5noop ${ALL_TLL_LIBS})

SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/H5Znoop1.c PROPERTIES COMPILE_OPTIONS -DNOOP_INSTANCE=1)
ADD_LIBRARY(h5noop1 MODULE ${libh5noop1_SOURCES})
SET_TARGET_PROPERTIES(h5noop1 PROPERTIES LIBRARY_OUTPUT_NAME "h5noop1")
SET_TARGET_PROPERTIES(h5noop1 PROPERTIES ARCHIVE_OUTPUT_NAME "h5noop1")
SET_TARGET_PROPERTIES(h5noop1 PROPERTIES RUNTIME_OUTPUT_NAME "h5noop1")
TARGET_LINK_LIBRARIES(h5noop1 ${ALL_TLL_LIBS})

ADD_LIBRARY(nczdeflate MODULE ${libnczdeflate_SOURCES})
SET_TARGET_PROPERTIES(nczdeflate PROPERTIES LIBRARY_OUTPUT_NAME "nczdeflate")
SET_TARGET_PROPERTIES(nczdeflate PROPERTIES ARCHIVE_OUTPUT_NAME "nczdeflate")
SET_TARGET_PROPERTIES(nczdeflate PROPERTIES RUNTIME_OUTPUT_NAME "nczdeflate")
TARGET_LINK_LIBRARIES(nczdeflate ${ALL_TLL_LIBS})

ADD_LIBRARY(nczbzip2 MODULE ${libnczbzip2_SOURCES})
SET_TARGET_PROPERTIES(nczbzip2 PROPERTIES LIBRARY_OUTPUT_NAME "nczbzip2")
SET_TARGET_PROPERTIES(nczbzip2 PROPERTIES ARCHIVE_OUTPUT_NAME "nczbzip2")
SET_TARGET_PROPERTIES(nczbzip2 PROPERTIES RUNTIME_OUTPUT_NAME "nczbzip2")
TARGET_LINK_LIBRARIES(nczbzip2 ${ALL_TLL_LIBS})

ENDIF(BUILD_UTILITIES)
ENDIF(ENABLE_FILTER_TESTING)

# Copy some test files from current source dir to out-of-tree build dir.
FILE(COPY ${COPY_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
IF(MSVC)
  FILE(COPY ${COPY_FILES} DESTINATION ${RUNTIME_OUTPUT_DIRECTORY}/)
ENDIF()
